# slurm-slurm-19-05-7-1

./: slurm.spec
src/plugins/sched/backfill/: Makefile.am  backfill_wrapper.c
src/plugins/sched/builtin/: Makefile.am  builtin_wrapper.c
src/slurmctld/: Makefile.am  proc_req.c  slurmctld.h
